--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "echarts": "^5.5.1",
+    "iview": "^3.5.4",
     "view-design": "^4.7.0",
+    "view-ui-plus": "^1.3.18",
     "vue": "^3.4.29",
-    "vue-echarts": "^6.7.3",
-    "iview":"^3.5.4"
+    "vue-echarts": "^6.7.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
