--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,16 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "echarts": "^5.5.1",
     "iview": "^3.5.4",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
     "view-design": "^4.7.0",
     "view-ui-plus": "^1.3.18",
     "vue": "^3.4.29",
-    "vue-echarts": "^6.7.3"
+    "vue-echarts": "^6.7.3",
+    "vue-select": "^3.20.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
